# MyMTA

./: Cargo.toml  README.md  mymta.toml
examples/: delivery_example.rs
src/: config.rs  lib.rs  main.rs
src/auth/: dkim.rs  dmarc.rs  mod.rs  spf.rs
src/delivery/: README.md  client.rs  connector.rs  error.rs  mod.rs  mx_resolve.rs  result.rs
src/dns/: cache.rs  error.rs  mod.rs  resolver.rs
src/http/: api.rs
src/message/: envelope.rs  mod.rs  parser.rs
src/queue/: manager.rs  mod.rs  retry.rs
src/smtp/: command.rs  mod.rs  response.rs  server.rs  session.rs
src/spool/: disk.rs
tests/: delivery_tests.rs  http_tests.rs  integration_tests.rs
