[package]
name = "mymta"
version = "0.1.0"
edition = "2021"
description = "A Mail Transfer Agent built from scratch in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = { version = "0.7", features = ["json"] }
hyper = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
